# GpuEdgeDetectionPipeline

./: .gitignore  CMakeLists.txt  COHERENCE_ANALYSIS.md  README.md  bmpzip
include/: image_descriptor.hpp  kernel.cuh  pipeline.hpp  profiler.hpp  thread_pool.hpp  utils.hpp
output_images/: output_image_0_stats.txt  output_image_10_stats.txt  output_image_11_stats.txt  output_image_12_stats.txt  output_image_13_stats.txt  output_image_14_stats.txt  output_image_15_stats.txt  output_image_16_stats.txt  output_image_17_stats.txt  output_image_18_stats.txt  output_image_19_stats.txt  output_image_1_stats.txt  output_image_20_stats.txt  output_image_21_stats.txt  output_image_22_stats.txt  output_image_23_stats.txt  output_image_24_stats.txt  output_image_25_stats.txt  output_image_26_stats.txt  output_image_27_stats.txt  output_image_28_stats.txt  output_image_29_stats.txt  output_image_2_stats.txt  output_image_3_stats.txt  output_image_4_stats.txt  output_image_5_stats.txt  output_image_6_stats.txt  output_image_7_stats.txt  output_image_8_stats.txt  output_image_9_stats.txt
src/: bmpread.c  kernel.cu  main.cpp
tests/: test_output_images.cpp
